--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "glightbox": "^3.3.0",
     "react": "^18.3.1",
     "react-aos": "^1.0.1",
     "react-bootstrap": "^2.10.2",
