--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
