--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
     "react-swiper": "^0.1.5",
     "slick-carousel": "^1.8.1",
